--- a/gui/project/.gitignore
+++ b/gui/project/.gitignore
@@ -5,3 +5,9 @@
 /MainGui$1.class
 /MainGui.class
 /MainGui$2.class
+/idk$1.class
+/idk.class
+/MainGui$3.class
+/MainGui$4.class
+/MainGui$SwingAction.class
+/MainGui$5.class
