adding about page

--- a/gui/project/.gitignore
+++ b/gui/project/.gitignore
@@ -11,3 +11,8 @@
 /MainGui$4.class
 /MainGui$SwingAction.class
 /MainGui$5.class
+/AboutGui$1.class
+/AboutGui.class
+/AboutGui$2.class
+/help$1.class
+/help.class
