--- a/gui/project/.gitignore
+++ b/gui/project/.gitignore
@@ -19,3 +19,12 @@
 /HelpGui$1.class
 /HelpGui.class
 /MainGui$6.class
+/aboutpage.class
+/aboutpage$1.class
+/helppage.class
+/helppage$1.class
+/nonintduration.class
+/nonintduration$1.class
+/negDuration.class
+/negduration.class
+/negduration$1.class
