--- a/gui/project/.gitignore
+++ b/gui/project/.gitignore
@@ -31,3 +31,8 @@
 /name.class
 /analyzeInput.class
 /Node.class
+/analyzeinput.class
+/analyzeInput$1.class
+/analyzeInput$2.class
+/analyzeInput$3.class
+/MainGui$7.class
