--- a/gui/project/.gitignore
+++ b/gui/project/.gitignore
@@ -36,3 +36,7 @@
 /analyzeInput$2.class
 /analyzeInput$3.class
 /MainGui$7.class
+/reset.class
+/reset$1.class
+/deponself.class
+/deponself$1.class
