adding function to all buttons

--- a/gui/project/.gitignore
+++ b/gui/project/.gitignore
@@ -50,3 +50,9 @@
 /outputFile.class
 /fileout.class
 /fileout$1.class
+/changeDuration.class
+/changeDuration$1.class
+/MainGui$9.class
+/critPath.class
+/critPath$1.class
+/MainGui$10.class
