--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\Nathan\\Documents\\GitHub\\360-project\\gui","type":"PROJECT","hints":{"PROJECT_NAME":"gui"}},"ABSENT"]]
