--- a/gui/project/.gitignore
+++ b/gui/project/.gitignore
@@ -53,3 +53,7 @@
 /critPath.class
 /critPath$1.class
 /critPathData.class
+/MainGui$10.class
+/MainGui$9.class
+/changeDuration.class
+/changeDuration$1.class
